# hot-validation-sdk

./: .dockerignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci-integration-test.yml  rpc-fetch-release.yml
core/: .env.template  Cargo.toml  README.md
core/src/: evm.rs  http_client.rs  internals.rs  lib.rs  metrics.rs  near.rs  solana.rs  stellar.rs  threshold_verifier.rs  ton.rs
core/src/metrics/: mod.rs  performance.rs
core/src/verifiers/: cosmos.rs  evm.rs  mod.rs  near.rs  solana.rs  stellar.rs  ton.rs
core/src/verifiers/evm/: mod.rs  types.rs
core/src/verifiers/near/: mod.rs  types.rs
core/src/verifiers/ton/: mod.rs  types.rs
mpc-proxy/: Cargo.toml  Dockerfile  Makefile.toml
mpc-proxy/integration-tests/: docker-compose.yml
mpc-proxy/integration-tests/interactor/: main.py  pyproject.toml
mpc-proxy/integration-tests/telemetry/: config.alloy
mpc-proxy/integration-tests/test-data/: README.md
mpc-proxy/src/: cli.rs  main.rs  openapi.rs  secrets.rs  telemetry.rs
mpc-proxy/src/api/: bridge.rs  create_wallet.rs  healthcheck.rs  mod.rs  public_key.rs  sign.rs  telemetry.rs
mpc-proxy/src/domain/: errors.rs  mod.rs
mpc-proxy/src/domain/bridge/: clear_completed_withdrawal.rs  deposit.rs  mod.rs  withdrawal.rs
mpc-proxy/src/domain/mpc/: api.rs  cluster.rs  mod.rs
mpc-proxy/src/handlers/: healthcheck.rs  mod.rs  telemetry.rs
primitives/: Cargo.toml  README.md
primitives/src/: base58_wrapper.rs  chain_id.rs  hex_wrapper.rs  integer.rs  lib.rs  mpc.rs  uid.rs  validation.rs
primitives/src/bridge/: cosmos.rs  evm.rs  mod.rs  solana.rs  stellar.rs  ton.rs
rpc-fetch/: Cargo.toml  Dockerfile  Makefile.toml  README.md
rpc-fetch/src/: main.rs  supported_chains.rs
rpc-fetch/src/providers/: alchemy.rs  ankr.rs  infura.rs  mod.rs  quicknode.rs
rpc-healthcheck/: Cargo.toml  README.md
rpc-healthcheck/src/: lib.rs  observer.rs
src/: evm.rs  internals.rs  lib.rs  near.rs  stellar.rs  ton.rs
src/metrics/: availability.rs  mod.rs
