[workspace]
resolver = "3"
members = ["core", "mpc-proxy", "primitives", "rpc-fetch", "rpc-healthcheck"]

[workspace.package]
edition = "2024"
repository = "https://github.com/hot-dao/hot-validation-sdk"
version = "0.1.0"
rust-version = "1.85.0"

[workspace.dependencies]
hot-validation-primitives.path = "primitives"
hot-validation-rpc-healthcheck.path = "rpc-healthcheck"

actix-web = "4.11.0"
alloy-contract = "1.0.24"
alloy-dyn-abi = "1.3.0"
alloy-json-abi = "1.3.0"
alloy-primitives = "1.3.0"
alloy-sol-types = "1.3.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
borsh = { version = "1.5.7", features = ["borsh-derive"] }
bs58 = "0.5.1"
clap = "4.5.46"
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
num_cpus = "1.17.0"
primitive-types = { version = "0.13.1", default-features = false }
prometheus = "0.13.4"
rand = "0.9.2"
reqwest = { version = "0.12.9", features = ["json"] }
rlp = "0.6.1"
schemars = { version = "0.8.21", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.140"
serde_valid = "1.0.5"
serde_with = "3.14.0"
serde_yaml = "0.9.33"
sha2 = "0.10.8"
solana-client = "3.0.2"
solana-commitment-config = "3.0.0"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-sdk = "3.0.0"
soroban-client = "0.5.1"
stellar-xdr = "23.0.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0.16"
tokio = "1.45.0"
tokio-util = "0.7.14"
tonlib-core = "0.26.1"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = "0.3.20"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
as_conversions = { level = "deny", priority = -1 }

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unreadable_literal = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"
