[package]
name = "hot-validation-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
hot-validation-primitives = { workspace = true }
hot-validation-rpc-healthcheck = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

sha2 = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }

tracing = { workspace = true }

reqwest = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }

futures-util = { workspace = true }

once_cell = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
soroban-client = { workspace = true }

alloy-json-abi.workspace = true
alloy-dyn-abi.workspace = true
alloy-contract.workspace = true

tonlib-core = { workspace = true }
serde-hex = { workspace = true }
derive_more = { workspace = true, features = ["full"] }