[package]
name = "hot-validation-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
hot-validation-primitives = { workspace = true }

alloy-contract = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-json-abi = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
primitive-types = { workspace = true, default-features = false }
prometheus = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-sdk = { workspace = true }
soroban-client = { workspace = true }
thiserror = "2.0.17"
tokio = { workspace = true }
tonlib-core = { workspace = true }
tracing = { workspace = true }
