[package]
name = "hot-protocol-mpc-proxy"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
actix-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-actix-web = { workspace = true }
num_cpus = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
utoipa = { workspace = true, features = ["macros", "actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
serde = { workspace = true, features = ["derive"] }
utoipa-actix-web = { workspace = true }
prometheus = { workspace = true }

# todo: secrecy