[package]
name = "hot-protocol-mpc-proxy"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
actix-web = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
num_cpus = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
utoipa = { workspace = true, features = ["macros", "actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
