[package]
name = "hot-validation-primitives"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
alloy-dyn-abi = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true, features = ["serde"] }
schemars = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
serde_json = { workspace = true }
serde_valid = { workspace = true }
stellar-xdr = { workspace = true }
tonlib-core = { workspace = true }
bs58 = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
solana-sdk = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
abi = ["borsh/unstable__schema", "borsh/derive"]
