[package]
name = "hot-validation-primitives"
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
abi = ["borsh/unstable__schema", "borsh/derive"]
mpc = ["k256", "cait-sith"]

[dependencies]
alloy-dyn-abi = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
bs58 = { workspace = true }
cait-sith = { workspace = true, features = ["k256"], optional = true }
derive_more = { workspace = true }
hex = { workspace = true, features = ["serde"] }
k256 = { workspace = true, optional = true }
rlp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
serde_json = { workspace = true }
serde_valid = { workspace = true }
serde_with = { workspace = true, features = ["hex", "base64"] }
sha2 = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519"] }
stellar-xdr = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tonlib-core = { workspace = true }
prefix-hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
