[package]
name = "hot-validation-rpc-fetch"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
hot-validation-rpc-healthcheck = { workspace = true }
hot-validation-primitives = { workspace = true }

clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
