[package]
name = "hot-validation-rpc-healthcheck"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
hot-validation-primitives = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = {workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
