[package]
name = "hot-validation-rpc-healthcheck"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
hot-validation-primitives = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
